Fix z-index for Special:CategoryTree dropdown list
[3.1]

Please cherry-pick to master

--- a/resources/stylesheets/fixes/desktop.specialpages.less
+++ b/resources/stylesheets/fixes/desktop.specialpages.less
@@ -68,3 +68,9 @@ body.ns-special {
 .mw-userlogin-help {
 	display: none;
 }
+
+/*Special:CategoryTree*/
+body.mw-special-CategoryTree .oo-ui-defaultOverlay {
+	z-index: 200;
+}
+
